1 file modified, 1 added, 1 deleted

--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -46,7 +46,7 @@
                   </mat-select>
             </mat-form-field>
             you select: {{selected}}
-            <img src="http://www.achado.com.au/img/{{selected}}.png">
+            <img src="/CaptureX.JPG">
             <div><i class="fas fa-award"></i></div>
             <button mat-raised-button type="button" color="warn" (click)="deleteTile(i)">Remove Tile</button>
             <br>
