--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -5,7 +5,7 @@ flip grain 'button' above image, size input on left and bottom.
 3d & plan view of cut/profiled tile. 
 -->
 
-<h1>Tile Cutting Order Form v0.7</h1>
+<h1>Customed Order Form</h1>
 <form [formGroup]="myForm" [hidden]="success" (ngSubmit)="submitHandler()">
   <hr>
   <h2>Contact information</h2>
@@ -251,6 +251,7 @@ flip grain 'button' above image, size input on left and bottom.
 </div>
 
 <br><hr><br><br>
-x{{ events }}x
+This form is still being developed, please ensure you contact Customed Tiles by phone or email in addition to submitting the form.
+You can ignore the below. It is for debugging only. {{ events }}x
   Value: {{ myForm.value | json }}
   <br>
