--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -251,7 +251,7 @@ flip grain 'button' above image, size input on left and bottom.
 </div>
 
 <br><hr><br><br>
-This form is still being developed, please ensure you contact Customed Tiles by phone or email in addition to submitting the form.
+This form is still being developed, please ensure you contact Customed Tiles by phone or email in addition to submitting the form.<br>
 You can ignore the below. It is for debugging only. {{ events }}x
   Value: {{ myForm.value | json }}
   <br>
