--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -9,31 +9,31 @@ flip grain 'button' above image, size input on left and bottom.
 <form [formGroup]="myForm" [hidden]="success" (ngSubmit)="submitHandler()">
   <hr>
   <h2>Contact information</h2>
-  <mat-form-field class="dp">
+  <mat-form-field class="dp xs">
     <input matInput placeholder="Name" formControlName="name">
         <mat-error *ngIf="myForm['controls']?.name.invalid && name.touched" class="has-text-danger">
             *required
         </mat-error>
   </mat-form-field>    
  
-  <mat-form-field class="dp">
+  <mat-form-field class="dp xs">
     <input matInput placeholder="Email" formControlName="email">
       <mat-error *ngIf="email.invalid && email.touched" class="has-text-danger">
             *please enter a valid email address
       </mat-error>
   </mat-form-field>  
   
-  <mat-form-field class="dp">
+  <mat-form-field class="dp xs">
     <input matInput placeholder="Company" formControlName="company">
   </mat-form-field>  
   <br>
 
-  <mat-form-field class="dp">
+  <mat-form-field class="dp xs">
       <input matInput [matDatepicker]="reqDate" placeholder="Date required" (dateInput)="thongyChanged('input', $event)">
       <mat-datepicker-toggle matSuffix [for]="reqDate"></mat-datepicker-toggle>
       <mat-datepicker #reqDate></mat-datepicker>
   </mat-form-field>  
-  <mat-form-field class="dp">
+  <mat-form-field class="dp xs">
     <input matInput placeholder="Order Number" formControlName="orderNum">
   </mat-form-field>  
   <br>
@@ -42,11 +42,11 @@ flip grain 'button' above image, size input on left and bottom.
 
         <div *ngFor="let tile of myForm['controls'].tiles['controls']; let i=index" [formGroupName]="i">
           <hr>
-        <h2>Original tile to cut</h2>
-            <mat-form-field class="xs">
+        <h2>Original tile supplied</h2>
+            <mat-form-field class="dp xs">
                 <input matInput placeholder="Quantity" formControlName="quantity">
             </mat-form-field>
-            <mat-form-field class="dp" >
+            <mat-form-field class="dp xs" >
                     <mat-select placeholder="Material" [(value)]="selected" formControlName="material">
                     <mat-option value="porcelain">Porcelain</mat-option>
                     <mat-option value="marble">Marble</mat-option>
@@ -54,27 +54,27 @@ flip grain 'button' above image, size input on left and bottom.
                     <mat-option value="stone">Other</mat-option>
                   </mat-select>
             </mat-form-field>
-            <mat-form-field class="xs">
+            <mat-form-field class="dp xs">
               <input matInput type="number" placeholder="Thickness (mm)" formControlName="thickness">
               <mat-error *ngIf="tile['controls'].thickness.invalid && tile['controls'].thickness.touched" class="has-text-danger">
                 *Thickness must be 40mm or less
               </mat-error>
             </mat-form-field>
-            <button mat-raised-button type="button" color="warn" (click)="deleteTile(i)">Remove Tile</button>
+            <div *ngIf="[i]!=0" ><button mat-raised-button type="button" color="warn" (click)="deleteTile(i)">Remove Tile</button></div>
             <br>
-            Size: 
-            <mat-form-field class="xs">
-                <input matInput type="number" placeholder="(mm)" formControlName="length">
-            </mat-form-field>
-            x
-            <mat-form-field class="xs">
-                <input matInput type="number" placeholder="(mm)" formControlName="width">
-            </mat-form-field>
-        <div class="tilesizer">
-        <div style="width: 50%; text-align: center;">a</div>
-        <div style="width: 50%; text-align: center;">b</div>
 
-      </div>
+        <div class="tilesizer" style="height:200px; width:400px">
+          <div style="height:100%; width: 40%; text-align: center; border-style:none; float:left;"><div style=" padding-top:50%; "><mat-form-field class="xs">
+                <input matInput type="number" placeholder="Size A(mm)" formControlName="length">
+            </mat-form-field></div></div>
+          <div style="height:100%; width: 40%; text-align: center; border-style:solid; float:left">
+             <div style="height: 180px; width: 100%; text-align: center;"></div>
+             <div style="width: 100%; text-align: center;"> 
+              <mat-form-field class="dp xs">
+                <input matInput type="number" placeholder="(mm)" formControlName="width">
+              </mat-form-field></div>
+          </div>
+       </div>
    
               <!--<div *ngIf="tile.errors?.widthGreaterThanLength && (myForm.touched || myForm.dirty)" class="cross-validation-error-message alert alert-danger">
                 Length must be equal to or greater than width.
