--- a/src/styles.css
+++ b/src/styles.css
@@ -2,8 +2,8 @@
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 .content {
-    padding: 0;
-    max-width: 50em;
+    padding: 15px;
+    max-width: 40em;
     margin: auto;
 }
 
@@ -33,12 +33,12 @@ body {
 
 .xs {
     margin-right: 15px;
-    width: 20%;
+    width: 10em;
 }
 
 
 .sm {
-    width: 25%;
+    width: 10em;
 }
 
 .dp {
