--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -66,7 +66,7 @@ flip grain 'button' above image, size input on left and bottom.
 						</div>
 						<br>
 
-						<div class="tilesizer" style="height:14em; width:40em">
+						<div class="tilesizer" style="height:14em; width:30em">
 							<div style="height:100%; width: 30%; text-align: center; border-style:none; float:left;">
 								<div style="padding-top:30%; float:right ">
 									<mat-form-field class="xss">
@@ -375,7 +375,8 @@ flip grain 'button' above image, size input on left and bottom.
 										</span>
 										profile
 								</div>
-								<div [style.width.px]="cut['controls'].dispwidth.value" style="height: 70px; border-style:none; float:left">
+
+							<div *ngIf="tile['controls'].service.value=='profile'"  [style.width.px]="tile['controls'].miniwidth.value" style="height: 70px; border-style:none; float:left">
 									<div style="width: 100%; height: 25%; text-align: center; border-style:none;">
 										<mat-checkbox formControlName="edge1"></mat-checkbox>
 									</div>
@@ -395,7 +396,28 @@ flip grain 'button' above image, size input on left and bottom.
 										style="width: 100%; height: 25%; text-align: center; border-style:none; margin:0; padding:0; ">
 										<mat-checkbox formControlName="edge4"></mat-checkbox>
 									</div>
+								</div>
 
+              <div *ngIf="tile['controls'].service.value!='profile'" [style.width.px]="cut['controls'].dispwidth.value" style="height: 70px; border-style:none; float:left">
+									<div style="width: 100%; height: 25%; text-align: center; border-style:none;">
+										<mat-checkbox formControlName="edge1"></mat-checkbox>
+									</div>
+									<div
+										style="width: 33%; height: 50%; padding-top:8px; text-align: right; border-style:none; float:left;">
+										<mat-checkbox formControlName="edge2"></mat-checkbox>
+									</div>
+									<div
+										style="width: 34%; height: 50%; text-align: center; border-style:none; float:left;">
+										<div style="width: 100%; height: 106%; border-style:solid; margin:0;"></div>
+									</div>
+									<div
+										style="width: 33%; height: 50%; padding-top:8px; text-align: left; border-style:none; float:left;">
+										<mat-checkbox formControlName="edge3"></mat-checkbox>
+									</div>
+									<div
+										style="width: 100%; height: 25%; text-align: center; border-style:none; margin:0; padding:0; ">
+										<mat-checkbox formControlName="edge4"></mat-checkbox>
+									</div>
 								</div>
 
 								<div style="height: 70px; float:left; clear: right;">
