--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -8,6 +8,8 @@ flip grain 'button' above image, size input on left and bottom.
 <h1>Customed Order Form</h1>
 <form [formGroup]="myForm" [hidden]="success" (ngSubmit)="submitHandler()">
 	<hr>
+  Image test
+  <input type="file" accept="image/*" capture="camera" />
 	<h2>Contact information</h2>
 	<mat-form-field class="dp xs">
 		<input matInput placeholder="Name" formControlName="name">
