--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -467,5 +467,6 @@ flip grain 'button' above image, size input on left and bottom.
 <hr><br><br>
 This form is still being developed, please ensure you contact Customed Tiles by phone or email in addition to submitting the form.<br>
 You can ignore the below. It is for debugging only. 
-  Value: {{ myForm.value | json }}
+  Value: {{ myForm.value | json }}<br>
+  Parameter was: {{myForm.date}}
 <br>
