--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -460,6 +460,7 @@ flip grain 'button' above image, size input on left and bottom.
 <br>
 <div *ngIf="success" class="notification is-success">
 	Thank You! We received your submission.
+  <br><a href="https://customedtiles.com.au">click to return to home page</a>
 </div>
 
  
